# career-counselling-app

./: .gitignore  README.md
ai-agent/: gemini_agent.py
aigents/: README.md  pyproject.toml  report.md
aigents/src/aigents/: crew.py  main.py
aigents/src/aigents/config/: agents.yaml  tasks.yaml
backend/: db.js  index.js  package-lock.json  package.json
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/Components/: Chatbot.css  Home.jsx  Login.css  Login.jsx  Message.jsx
