[project]
name = "aigents"
version = "0.1.0"
description = "aigents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
aigents = "aigents.main:run"
run_crew = "aigents.main:run"
train = "aigents.main:train"
replay = "aigents.main:replay"
test = "aigents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
